<resources>
    <string name="app_name">MQTT_Alerts</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">IOT Alerts</string>
    <string name="second_fragment_label">Broker Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_topic">Add a topic</string>
    <string name="broker_uri_label">Broker URI</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="unsubscribe_topic">unsubscribe from topic</string>
    <string name="alarm_off">turn off alarm</string>
    <string name="date">Date:</string>
    <string name="acknowledgment_status">acknowledgment status</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="message">Message:</string>
    <string name="disconnect">Disconnect</string>
    <string name="topic">Topic</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="subscribe">Subscribe</string>
    <string name="delete_alert_from_history">Delete alert from history</string>
    <string name="acknowledge">Acknowledge</string>
</resources>