<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBG_color"
    android:paddingTop="100dp"
    android:paddingBottom="100dp"
    tools:context=".presentation.settings.SettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brokerURILayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/broker_uri_label"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@android:color/darker_gray"
        app:boxBackgroundColor="?attr/primaryBG_color"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/brokerURIEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="?attr/primaryBG_color"
        app:boxStrokeColor="@android:color/darker_gray"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brokerURILayout"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@android:color/darker_gray"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:layout_constraintBottom_toTopOf="@id/connectBtn"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectBtn"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:cornerRadius="6.5dp"
        app:rippleColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/disconnectBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/disconnectBtn"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/disconnect"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:cornerRadius="6.5dp"
        app:rippleColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectBtn"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

</androidx.constraintlayout.widget.ConstraintLayout>