<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/topicNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unsubscribeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe"
            android:textColor="@color/white"
            app:rippleColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/topicNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topicNameTextView"
            app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_10sdp"
            app:dividerColor="@color/dividerColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topicNameTextView"
            />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/date"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"

            />

        <TextView
            android:id="@+id/dateContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
            app:layout_constraintEnd_toStartOf="@+id/acknowledgeImageView"
            app:layout_constraintStart_toEndOf="@id/dateTextView"
            app:layout_constraintTop_toTopOf="@+id/dateTextView"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTextView"
             />

        <TextView
            android:id="@+id/messageContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"

            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="@+id/messageTextView"
            app:layout_constraintEnd_toStartOf="@+id/acknowledgeImageView"
            app:layout_constraintStart_toEndOf="@id/messageTextView"
            app:layout_constraintTop_toTopOf="@+id/messageTextView"
            />

        <ImageView
            android:id="@+id/acknowledgeImageView"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:contentDescription="@string/acknowledgment_status"
            android:src="@drawable/baseline_check_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>