<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyBG"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/topicNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_close_24"
            android:backgroundTint="@color/greyBG"
            android:textColor="@color/white"
            android:contentDescription="@string/delete_alert_from_history"
            app:layout_constraintBottom_toBottomOf="@+id/topicNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topicNameTextView"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/dividerColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topicNameTextView"
            />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/date"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"

            />

        <TextView
            android:id="@+id/dateContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dateTextView"
            app:layout_constraintTop_toTopOf="@+id/dateTextView"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTextView"
            />

        <TextView
            android:id="@+id/messageContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/messageTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/messageTextView"
            app:layout_constraintTop_toTopOf="@+id/messageTextView" />


        <Button
            android:id="@+id/acknowledgeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/acknowledge"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/darkBlue"
            app:layout_constraintTop_toBottomOf="@id/messageContentTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>